Fix main nav on visibility on desktop

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -28,7 +28,7 @@ a {
 }
 
 .button {
-  @apply rounded-full bg-secondary-500 hover:opacity-80 transition-opacity duration-300 ease-in-out text-white px-6 py-2 inline-block font-bold shadow-lg text-lg;
+  @apply rounded-full bg-secondary-500 hover:opacity-80 transition-opacity duration-300 ease-in-out text-white px-6 py-2 inline-block font-bold shadow-lg text-lg focus:outline-none;
 }
 
 .button-primary {
